--- a/css/styles.css
+++ b/css/styles.css
@@ -10319,7 +10319,7 @@ header.masthead h1 {
 }
 .timeline {
   position: relative;
-  padding: 0;
+  padding: 3em 0 0 0;
   list-style: none;
 }
 .timeline:before {
@@ -10374,7 +10374,8 @@ header.masthead h1 {
   color: white;
   border: 7px solid #e9ecef;
   border-radius: 100%;
-  background-color: #fed136;
+  background-color: white;
+  background-image: linear-gradient(white, black);
 }
 .timeline > li .timeline-image h4 {
   font-size: 10px;
@@ -10484,3 +10485,4 @@ header.masthead h1 {
     padding: 0 100px 20px 20px;
   }
 }
+
