--- a/css/styles.css
+++ b/css/styles.css
@@ -6053,7 +6053,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #f4623a !important;
+  background-color: #ffffff !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -9986,7 +9986,7 @@ hr.light {
 }
 
 .page-section {
-  padding: 3rem 0;
+  padding: 1rem 0;
 }
 
 #mainNav {
@@ -10334,6 +10334,8 @@ header.masthead h1 {
   border-radius: 100%;
   background-color: white;
 }
+
+
 .timeline > li .timeline-image h4 {
   font-size: 10px;
   line-height: 14px;
