--- a/css/styles.css
+++ b/css/styles.css
@@ -10471,3 +10471,31 @@ header.masthead h1 {
 #btnManual{
   margin-top: 3rem;
 }
+
+.card-flip > div {
+  backface-visibility: hidden;
+  transition: transform 300ms;
+  transition-timing-function: linear;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  display: flex;
+}
+
+.card-front {
+  transform: rotateY(0deg);
+}
+
+.card-back {
+  transform: rotateY(180deg);
+  position: absolute;
+  top: 0;
+}
+
+.card-flip:active .card-front {
+  transform: rotateY(-180deg);
+}
+  
+.card-flip:active .card-back {
+  transform: rotateY(0deg);
+}
